fixed spacing issue in mobile navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,23 +266,23 @@ select {
 /* MOBILE NAVBAR */
 .navbar {
   width: 100%;
-  height: 100%;
 }
 .navbar .nav {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   align-items: center;
 }
 .navbar .nav .nav-header {
   width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: auto auto auto;
   justify-content: space-between;
   align-items: center;
   max-width: 90vw;
   margin: auto;
+  height: 50px;
 }
 .navbar .nav .nav-header .nav-logo {
   width: 4rem;
@@ -313,7 +313,7 @@ select {
 }
 .navbar .nav .nav-links {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 75px);
   list-style-type: none;
   background: black;
   overflow: hidden;
@@ -351,10 +351,14 @@ select {
   }
 }
 .navbar .nav .show-links {
-  padding-bottom: 0.25rem;
-  height: 100vh;
+  height: calc(100vh - 50px);
   transition: all 0.4s linear;
-  margin-top: 1rem;
+}
+@media screen and (min-width: 1100px) {
+  .navbar .nav .show-links {
+    height: 100%;
+    margin-top: 0;
+  }
 }
 @media screen and (min-width: 1100px) {
   .navbar .nav {
