--- a/scss/components/_navbars.scss
+++ b/scss/components/_navbars.scss
@@ -5,7 +5,8 @@
 
 .navbar {
     width: 100%;
-    height: 100%;
+    // height: 100%;
+    
     //background: rgb(40, 0, 97);
     // z-index: 2;
     // padding: 0.5rem 0;
@@ -16,19 +17,21 @@
     .nav {
         width: 100%;
         height: 100%;
+        // padding: 0.5rem 0;
         // display: grid;
         // grid-template-rows: auto auto;
         // place-items: center;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        // flex-direction: column;
+        // grid-template-rows: auto 1fr;
         align-items: center;
         // margin: auto;
         // grid-template-columns: 1fr;
-        // border: 2px solid pink;
+        //  border: 2px solid pink;
 
         .nav-header {
             width: 100%;
-            //  height: 75px;
+            height: 100%;
             display: grid;
             grid-template-columns: auto auto auto;
             justify-content: space-between;
@@ -36,6 +39,7 @@
             max-width: 90vw;
             margin: auto;
             
+            height: 50px;
 
             .nav-logo {
                 width: 4rem;
@@ -63,6 +67,7 @@
 
                         @media screen and (min-width: 1100px) {
                             display: inline;
+                            
                         }
                     }
                 }
@@ -73,7 +78,7 @@
 
         .nav-links {
             width: 100%;
-            height: 100vh;
+            height: calc(100vh - 75px);
             list-style-type: none;
             background: black;
             overflow: hidden;
@@ -96,6 +101,11 @@
                 letter-spacing: 0.1rem;
                 color: $white;
 
+                // text-align: center;
+                // padding: 2rem;
+                // font-size: 1.2rem;
+                // font-weight: bold;
+
                 &:hover {
                     color: $main-accent-clr;
                     font-weight: bold;
@@ -114,15 +124,25 @@
                     display: flex;
                     height: 100%;
                     justify-content: flex-end;
+                    
             }
         }
 
         .show-links {
-            padding-bottom: 0.25rem;
-            height: 100vh;
+            // padding-bottom: 0.25rem;
+            height: calc(100vh - 50px);
             transition: $transition-main;
-            margin-top: 1rem;
+            // margin-top: 1rem;
             // border: 2px solid red;
+
+            @media screen and (min-width: 1100px){
+                height: 100%;
+                margin-top: 0;
+            }
+
+            // @media screen and (min-width: 992px){
+            //     height: 100%;
+            // }
             
         }
 
@@ -131,7 +151,7 @@
             grid-template-columns: auto 1fr;
             justify-content: space-between;
             margin: auto;
-
+            
         }
     }
 } 
